# movieRecsBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pom.xml  toDOList.txt
.github/workflows/: version-bump.yml
apps/imdb-vec/: .env.example  Dockerfile  docker-compose.yml  pom.xml
apps/imdbvec/: pom.xml
apps/mcp-fastmcp/: .env.sample  Dockerfile  README.md  pom.xml  pyproject.toml
apps/mcp-fastmcp/src/main/java/com/gnemirko/mcpmovie/: MovieMcpApplication.java
apps/mcp-fastmcp/src/main/java/com/gnemirko/mcpmovie/controller/: McpController.java
apps/mcp-fastmcp/src/main/java/com/gnemirko/mcpmovie/model/: MovieActor.java  MovieContext.java  ResourcePointer.java  ResourceResult.java  ToolInvocation.java
apps/mcp-fastmcp/src/main/java/com/gnemirko/mcpmovie/service/: MovieSearchService.java
apps/mcp-fastmcp/src/main/resources/: application.yml
apps/mcp-fastmcp/src/mcpmovie/: __init__.py  config.py  database.py  embeddings.py  main.py  models.py  schemas.py  service.py
apps/movie-mcp-server/: .env  .env.sample  Dockerfile  pom.xml
apps/movie-recs-bot/: docker-compose.yml  pom.xml
apps/movieRecBot/: .env.sample  Dockerfile  docker-compose.yml  pom.xml
apps/normalizer/: Dockerfile  docker-compose.yml  pom.xml
docker/: entrypoint.sh
imdbVec/: .gitignore  README.md  docker-compose.yml  pom.xml
movieRecBot/: .dockerignore  .env.sample  Dockerfile  docker-compose.yml  pom.xml  toDOList.txt
movieRecBot/docker/: entrypoint.sh
scripts/: bootstrap_env.py  setup_bot.sh  setup_data.sh  setup_everything.sh
(+244 files in other folders)
