[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpmovie"
version = "0.1.0"
description = "FastMCP server exposing IMDb vector search results to movieRecBot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.32",
    "psycopg[binary]>=3.2.1",
    "httpx>=0.27.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
mcp-movie-server = "mcpmovie.main:run"
